
gEDA

GNU Electronic Design Automation
------------------------------------------------------------------------------

ChangeLog for libgeda 

Most recent changes are at the top of this file

5/31/99 Fixed printing for nets visual cues

	Removed all traces of the old connection system

	Discovered a core dump condition in clib_cache_free

	Few minor touch up to s_clib.c, but not enough to solve above

5/29/99 Change the license for libgeda back to GPL (from LGPL)

	Put in another check in the o_ales_update_nets function to 
	make sure we don't add duplicate objects into the ales_list's

	Added in code which allows for unattached toplevel attributes
	(o_attrib.c)

5/99	See ChangeLog in gschem for all the changes related to the new
	connection stuff

	All connection stuff is in o_ales.c (will be renamed to o_conn.c
	once things get a big more stable)

5/16/99 Removed ../libgeda/prototype.h from f_print.c

        Removed ../include/x_states.h and ../include/x_events.c

        Moved prototype.h to ../include (change all the source as well)

        Commented out most of ../include/globals.h

5/13/99 Increased the size of buffers and the reading in of attributes 
	(o_attrib.c -- o_read_attribs)

	Increased the size of text strings (in o_ntext_basic.c)
	
	Fixed the appropriate string in s_passing.c (and s_passing.h)

	Fixed text_string allocation size in add_object (s_basic.c) 

	The above changes should fix the bug reported by Thomas Dean

4/27/99 Minor comment fix in include/struct.h

4/20/99 Minor fprintf warning/error message touchups in s_clib.c

4/15/99	Added coord dialog variables to WINDOW structure

3/23/99 Added GtkWidget *abwindow to struct.h

3/19/99	Added expand_env_variables which takes a string and expands all
	shell enviroment variables. 

	Fixed it so that when you do some attribute related activities
	the changed flag gets set

	Had to remove one of the above because just selecting something 
	with attributes would cause the flag to be set...
