@@ -1,7 +1,7 @@
 ## Process this file with automake to produce Makefile.in
 
 EXTRA_DIST = \
-		IEC417.sch adders_1.sch all_1.sch agile-vfo-block.sch \
+		IEC417.sch adders_1.sch all_1.sch agile-vfo-block_1.sch \
 		attributes_1.sch README.agile \
 		cmos-invert.sch cmos-nand.sch cmos-nor.sch \
 		embedded_1.sch filter_1.sch flipflop_1.sch \
