@@ -5,7 +5,7 @@ dnl Initialize automake stuff
 PACKAGE=gEDA
 
 # new way of doing version
-VERSION=19990529
+VERSION=19990601
 
 echo Configuring symbols version $VERSION
 
